// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Placeholder renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#E9EBEE",
        "flex": 1,
        "flexDirection": "column",
        "position": "relative",
      },
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      },
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    h1={false}
    h2={false}
    h3={false}
    h4={false}
    h5={false}
    onPress={null}
    p={false}
    style={
      Array [
        Object {
          "color": "#222222",
          "fontFamily": "OpenSans-Regular",
          "fontSize": 18,
          "fontWeight": "500",
          "lineHeight": 23,
        },
      ]
    }
  >
    Coming soon...
  </Text>
</View>
`;

exports[`Placeholder w/ Text renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#E9EBEE",
        "flex": 1,
        "flexDirection": "column",
        "position": "relative",
      },
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      },
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    h1={false}
    h2={false}
    h3={false}
    h4={false}
    h5={false}
    onPress={null}
    p={false}
    style={
      Array [
        Object {
          "color": "#222222",
          "fontFamily": "OpenSans-Regular",
          "fontSize": 18,
          "fontWeight": "500",
          "lineHeight": 23,
        },
      ]
    }
  >
    Hello world!
  </Text>
</View>
`;
